[package]
name = "fungus"
version = "0.1.0"
authors = ["Chris Roberts"]
edition = "2021"
description = "Optimizing Befunge interpreter."
repository = "https://github.com/krobbi/fungus"
license = "MIT"
keywords = ["befunge", "esolang", "interpreter"]
categories = ["command-line-utilities", "compilers"]
publish = false

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
